Bug 1524748 - SNORM format enums are never valid for CopyTexImage. r=lsalzman

MozReview-Commit-ID: 6EDpI5hFwpu

Differential Revision: https://phabricator.services.mozilla.com/D18483